codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__queued_message_popup_view__tests__popup_shows_only_the_two_most_recent_messages_snapshot.snap
---
source: tui/src/app_shell/queued_message_popup_view_tests.rs
expression: rendered
---

  Dashboard  ◆ BC           gpt-5-codex ▾   default ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

 ◆ CONVERSATION
                                                                            │
╭──────────────────────────────────────────────────────────────────────╮    │
│◆ QUEUED  3                                                           │    │
│   2  second queued message                                           │    ┃
│   3  newest queued message continued                                 │    ┃
│Click to edit   Alt+↑↓ navigate   Shift+Alt+↑↓ reorder                │    ┃
╰──────────────────────────────────────────────────────────────────────╯
╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:15                                                             │
│> ordinary draft                                                            │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
